tests/ui/parser/mod_file_not_exist.stderr
error[E0583]: file not found for module `not_a_real_file`
  --> $DIR/mod_file_not_exist.rs:1:1
   |
LL | mod not_a_real_file;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `not_a_real_file`, create file "$DIR/not_a_real_file.rs" or "$DIR/not_a_real_file/mod.rs"
   = note: if there is a `mod not_a_real_file` elsewhere in the crate already, import it with `use crate::...` instead

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `mod_file_aux`
  --> $DIR/mod_file_not_exist.rs:5:16
   |
LL |     assert_eq!(mod_file_aux::bar(), 10);
   |                ^^^^^^^^^^^^ use of unresolved module or unlinked crate `mod_file_aux`
   |
   = help: you might be missing a crate named `mod_file_aux`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0433, E0583.
For more information about an error, try `rustc --explain E0433`.
